--- a/.github/workflows/build-macos.yml
+++ b/.github/workflows/build-macos.yml
@@ -23,7 +23,7 @@ jobs:
 
     - name: Archive Executable
       run: |
-        mv ~/Library/Developer/Xcode/DerivedData/Clipboard-*/Build/Products/Release/Clipboard*.app ./Clipboard-History.app
+        mv /Users/runner/work/clipboard_history/clipboard_history/build/Release/Clipboard\ History.app ./Clipboard-History.app
 
     - name: Upload Executable Artifact
       uses: actions/upload-artifact@v3
